# revault

./: .claudeignore  .gitignore  AGENTS.md  CHANGELOG.md  COMPETITOR_CENSUS_2026_07.md  CONTRIBUTING.md  CONVERTX_RESEARCH_2026_07.md  LICENSE  NEXT_STEPS.md  README.md  SECURITY.md  SPECS_UX_PERSONALITY.md  THIRD_PARTY_LICENSES.md  USAGE_DEMAND_STUDY_2026_07.md  package.json  pnpm-lock.yaml  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  gifski-release.yml  release.yml
docs/superpowers/plans/: 2026-07-19-dashboard-complete-data-ui.md  2026-07-19-dashboard-monthly-responsive.md  2026-07-19-desktop-updates.md
docs/superpowers/specs/: 2026-07-19-dashboard-complete-data-ui-design.md  2026-07-19-dashboard-monthly-responsive-design.md  2026-07-19-desktop-updates-design.md  2026-07-19-settings-redesign-design.md
scripts/: fetch-pdfium.sh
src/: app.css  app.d.ts  app.html  test-setup.ts
src-tauri/: Cargo.toml  coverage.sh  deny.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/pdfium/: .gitkeep
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: compress.rs  convert.rs  dedupe.rs  delete.rs  gif.rs  mod.rs  organize.rs  pdf.rs  privacy.rs  resize.rs  scanner.rs  thumbnail.rs  video.rs  watermark.rs
src-tauri/src/core/: cancel.rs  compression.rs  date.rs  dedupe.rs  gif.rs  heic.rs  image_io.rs  mod.rs  organize.rs  paths.rs  pdf.rs  pdf_render.rs  privacy.rs  rename.rs  resize.rs  scanner.rs  video.rs  watermark.rs
src/lib/: charts.test.ts  charts.ts  motion.test.ts  motion.ts  types.ts  utils.test.ts  utils.ts
src/lib/components/: AnalyzePage.svelte  BeforeAfterSlider.svelte  Button.svelte  CategoryLines.svelte  CategoryLines.test.ts  ChartTooltip.svelte  CompressPage.svelte  ConvertPage.svelte  DashboardPage.svelte  DashboardPage.test.ts  DropZone.svelte  HelperTooltip.svelte  KpiCard.svelte  KpiCard.test.ts  MonthlyBars.svelte  MonthlyBars.test.ts  OrganizePage.svelte  PdfPage.svelte  PrivacyPage.svelte  PrivacyToast.svelte  ProgressRing.svelte  ResizePage.svelte  SegmentedControl.svelte  SettingsPage.svelte  Sidebar.svelte  StorageDonut.svelte  StorageDonut.test.ts  ToggleSwitch.svelte  ToolShell.svelte  ToolsPage.svelte  TopBar.svelte  UpdateDialog.svelte  UpdateDialog.test.ts  VideoPage.svelte  WindowControls.svelte  segmentedNav.test.ts  segmentedNav.ts  startUpdateCheck.test.ts  startUpdateCheck.ts  tauriUpdateAdapter.test.ts  (+3 more)
src/lib/i18n/: index.ts
src/lib/stores/: activity.test.ts  activity.ts  compress.test.ts  compress.ts  convert.test.ts  convert.ts  dedupe.test.ts  dedupe.ts  history.test.ts  history.ts  locale.svelte.ts  locale.test.ts  nav.test.ts  nav.ts  organize.ts  pdf.test.ts  pdf.ts  privacy.test.ts  privacy.ts  resize.test.ts  resize.ts  (+12 more)
src/routes/: +layout.svelte  +page.svelte
(+33 files in other folders)
