[package]
name = "revault"
version = "0.1.0"
description = "Image compression, conversion, analysis and organization tool"
authors = ["ReVault Contributors"]
edition = "2021"

[lib]
name = "revault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
mozjpeg = { version = "0.10", default-features = false }
image = "0.25"
oxipng = "10"
webp = "0.3"

[dev-dependencies]
tempfile = "3"

