[package]
name = "revault"
version = "0.1.0"
description = "Image compression, conversion, analysis and organization tool"
authors = ["ReVault Contributors"]
edition = "2021"

[lib]
name = "revault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
mozjpeg = { version = "0.10", default-features = false }
# image["avif"] enables AVIF *decoding* via open_image(); ravif is used for *encoding*
image = { version = "0.25", features = ["avif"] }
oxipng = { version = "10", features = ["zopfli", "parallel"] }
webp = "0.3"
ravif = "0.13"
jxl-oxide = "0.12"
filetime = "0.2"
base64 = "0.22"
fast_image_resize = { version = "6", features = ["image"] }
kamadak-exif = "0.6"
img-parts = "0.4"
little_exif = "0.6"
image_hasher = "3.1"
sha2 = "0.11"
tempfile = "3"
rayon = "1.11"
memmap2 = "0.9"
trash = "5"
ffmpeg-sidecar = "2.5"
which = "8"
dirs = "6"
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"
foreign-types = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Graphics_Imaging", "Win32_System_Com"] }


